# script

new-project/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  CODE_CLEANUP_SUMMARY.md  CROSSPLATFORM_SUMMARY.md  CROSS_PLATFORM_FIXES.md  CompareOffsets.cpp  FEATURE_OFFSETS.md  Makefile  OFFSETS_CHECKLIST.md  ORBWALKER_GUIDE.md  ORBWALKER_SUMMARY.md  OffsetTools_README.md  README.md  TestLog.cpp  TestLogSimple.cpp  TestOffsets.cpp  ValidateOffsets.cpp  build.bat  build.sh  main.cpp  test_log  test_log.txt  test_log_simple  test_vector  test_vector.cpp
new-project/Core/: Events.cpp  Events.h  GameAPI.cpp  GameAPI.h  KBotCore.cpp  KBotCore.h  MemoryManager.cpp  MemoryManager.h  OffsetComparator.cpp  OffsetComparator.h  OffsetTester.cpp  OffsetTester.h  OffsetValidationSystem.cpp  OffsetValidationSystem.h  Offsets.h  Platform.h
new-project/Features/: Orbwalker.cpp  Orbwalker.h
new-project/Game/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  Hero.cpp  Hero.h  Minion.cpp  Minion.h  Turret.cpp  Turret.h
new-project/Input/: InputManager.cpp  InputManager.h
new-project/Renderer/: Renderer.cpp  Renderer.h
new-project/Security/: Protection.h
new-project/Tools/: OffsetFinder.cpp  OffsetFinder.h  OffsetFinderExample.cpp  OrbwalkerTest.cpp
new-project/UI/: Controls.cpp  Controls.h  UI.cpp  UI.h  UISample.cpp  UISample.h
new-project/Utils/: Config.h  Log.cpp  Log.h  Math.h  Vector.cpp  Vector.h
